--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "swalk-wechart-service",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "^1.5.7",
+    "angular": "1.5.7",
     "angular-animate": "^1.5.7",
     "angular-resource": "^1.5.7",
     "angular-sanitize": "^1.5.7",
